--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# Node modules
-node_modules/
+# # Node modules
+# node_modules/
 
-# Logs
-*.log
+# # Logs
+# *.log
 
-# Environment files
-.env
+# # Environment files
+# .env
 
-# OS-specific files
-.DS_Store
-Thumbs.db
+# # OS-specific files
+# .DS_Store
+# Thumbs.db
 
-# Build output
-build/
-dist/
+# # Build output
+# build/
+# dist/
